feat: More localization updates

--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -2,11 +2,15 @@
   "back": "Zurück",
   "calculator": "Taschenrechner",
   "cancel": "Abbrechen",
+  "check_email": "Überprüfen Sie Ihre E-Mail auf den Login-Link",
   "choose_a_game": "Wähle ein Spiel",
   "community": "Gemeinschaft",
   "copy": "Kopieren",
   "copied": "Kopiert",
+  "currently_logged_in": "Sie sind derzeit angemeldet mit:",
   "damage_calculator": "Schadensrechner",
+  "data_error": "Profil kann nicht aktualisiert werden",
+  "data_success": "Die Profildaten wurden erfolgreich gespeichert",
   "decreased_stat": "Verringerte statistik",
   "description": "Beschreibung",
   "delete_custom": "Dadurch wird das benutzerdefinierte Spiel gelöscht. Bist du sicher?",
@@ -18,12 +22,17 @@
   "Has no effect on": "Hat keine Auswirkung auf",
   "Immune to": "Immun gegen",
   "increased_stat": "Erhöhte statistik",
+  "login_error": "Anmeldung nicht möglich",
+  "logout_error": "Abmelden nicht möglich",
   "name": "Name",
   "nature": "Natur",
+  "no_nuzlocke": "Keine Nuzlocke-Daten gefunden",
   "None": "Keiner",
   "Not very effective against": "Nicht sehr wirksam gegen",
+  "obtain_nuzlocke_data": "Nuzlocke-Daten erhalten und synchronisieren",
   "please_enter": "Bitte geben Sie den Spielnamen ein",
   "please_select": "Bitte wählen Sie ein Spiel aus",
+  "replace_nuzlocke_data": "Die folgende Option wird Nuzlocke-Daten vom Server abrufen und Ihre aktuellen Nuzlocke-Daten ersetzen:",
   "report": "Melden",
   "Resists": "Widersteht",
   "save": "Speichern",
@@ -37,6 +46,9 @@
   "status": "Status",
   "suggested": "EMPFOHLEN",
   "Super effective against": "Super effektiv gegen",
+  "sync_error": "Das Profil konnte nicht synchronisiert werden",
+  "sync_success": "Profil erfolgreich synchronisiert",
+  "syncing": "Synchronisiere",
   "template_hint": "Beachten Sie, dass dadurch nur die möglichen Begegnungen und Level-Cap-Nummern kopiert werden, nicht jedoch die gym-Informationen",
   "tracker": "Tracker",
   "types": "Typen",
