--- a/src/locale/es/common.json
+++ b/src/locale/es/common.json
@@ -2,11 +2,15 @@
   "back": "Atrás",
   "calculator": "Calculadora",
   "cancel": "Cancelar",
+  "check_email": "Revise su correo electrónico para el enlace de inicio de sesión",
   "choose_a_game": "Elige un juego",
   "community": "Comunidad",
   "copy": "Copiar",
   "copied": "Copiado",
+  "currently_logged_in": "Actualmente estás conectado con:",
   "damage_calculator": "Calculadora de daños",
+  "data_error": "No se puede actualizar el perfil",
+  "data_success": "Se guardó con éxito los datos del perfil",
   "decreased_stat": "Stat disminuida",
   "description": "Descripción",
   "delete_custom": "Esto eliminará el juego personalizado. ¿Estás seguro?",
@@ -18,12 +22,17 @@
   "Has no effect on": "No tiene ningún efecto sobre",
   "Immune to": "Immune a",
   "increased_stat": "Stat aumentada",
+  "login_error": "No se puede iniciar sesión",
+  "logout_error": "No se puede cerrar la sesión",
   "name": "Nombre",
   "nature": "Naturaleza",
+  "no_nuzlocke": "No se encontraron datos nuzlocke",
   "None": "Ninguno",
   "Not very effective against": "No muy efectiva contra",
+  "obtain_nuzlocke_data": "Obtener y sincronizar datos de Nuzlocke",
   "please_enter": "Ingrese el nombre del juego",
   "please_select": "Por favor seleccione un juego",
+  "replace_nuzlocke_data": " La siguiente opción obtendrá datos de Nuzlocke del servidor y reemplazará sus datos de Nuzlocke actuales:",
   "report": "Reportar",
   "Resists": "Resiste",
   "save": "Guardar",
@@ -37,6 +46,9 @@
   "status": "Estado",
   "suggested": "SUGERENCIA",
   "Super effective against": "Super efectivo contra",
+  "sincronizando": "Sincronizando",
+  "sync_error": "No se pudo sincronizar el perfil",
+  "sync_success": "Se sincronizó con éxito el perfil",
   "template_hint": "Ten en cuenta que esto solo copiará los posibles encuentros y los números de límite de nivel, pero no la información del gym",
   "tracker": "Tracker",
   "types": "Tipos",
