--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -2,11 +2,15 @@
   "back": "Back",
   "calculator": "Calculator",
   "cancel": "Cancel",
+  "check_email": "Check your email for the login link",
   "choose_a_game": "Choose a game",
   "community": "Community",
   "copy": "Copy",
   "copied": "Copied",
+  "currently_logged_in": "You are currently logged in with:",
   "damage_calculator": "Damage Calculator",
+  "data_error": "Unable to update the profile",
+  "data_success": "Successfully saved the profile data",
   "decreased_stat": "Decreased stat",
   "description": "Description",
   "delete_custom": "This will delete the custom game. Are you sure?",
@@ -19,12 +23,17 @@
   "Has no effect on": "Has no effect on",
   "Immune to": "Immune to",
   "increased_stat": "Increased stat",
+  "login_error": "Unable to login",
+  "logout_error": "Unable to logout",
   "name": "Name",
   "nature": "Nature",
+  "no_nuzlocke": "No nuzlocke data found",
   "none": "None",
   "Not very effective against": "Not very effective against",
+  "obtain_nuzlocke_data": "Obtain and Sync Nuzlocke Data",
   "please_enter": "Please enter the game name",
   "please_select": "Please select a game",
+  "replace_nuzlocke_data": " The following option will obtain Nuzlocke data from the server and replace your current Nuzlocke Data:",
   "report": "Report",
   "Resists": "Resists",
   "save": "Save",
@@ -38,6 +47,9 @@
   "status": "Status",
   "suggested": "SUGGESTED",
   "Super effective against": "Super effective against",
+  "sync_success": "Successfully synced the profile",
+  "sync_error": "Unable to sync the profile",
+  "syncing": "Syncing",
   "template_hint": "Note this will only copy over the possible encounters and level cap numbers but not the gym information",
   "tracker": "Tracker",
   "types": "Types",
