feat: Updated remaining localizations, updated dependencies

--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -22,7 +22,11 @@
   "Has no effect on": "Hat keine Auswirkung auf",
   "Immune to": "Immun gegen",
   "increased_stat": "Erhöhte statistik",
+  "last_updated": "Zuletzt aktualisiert:",
+  "logging_out": "Abmelden",
   "login_error": "Anmeldung nicht möglich",
+  "login_with_email": "Melden Sie sich mit einer E-Mail an. Sie können Ihre Nuzlocke-Daten hochladen, um von einem anderen Gerät aus darauf zuzugreifen.",
+  "logout": "Abmelden",
   "logout_error": "Abmelden nicht möglich",
   "name": "Name",
   "nature": "Natur",
@@ -36,11 +40,16 @@
   "report": "Melden",
   "Resists": "Widersteht",
   "save": "Speichern",
+  "save_nuzlocke_data": "Nuzlocke-Daten und Benutzernamen speichern",
+  "save_nuzlocke_remotely": "Die folgende Option speichert Ihre Nuzlocke-Daten aus der Ferne (dies geschieht nicht automatisch):",
+  "saving": "Speichern",
   "search": "Suche",
   "search_help": "Suche nach Pokémon, Standort oder Status",
   "see_more": "Mehr sehen",
   "select": "Wähle",
   "select_move": "Wähle einen move...",
+  "send_magic_link": "Magischen Link senden",
+  "sending_magic_link": "Magischen Link senden",
   "share_success": "Jetzt teilen",
   "show_all_tooltip": "Wenn Sie das gesuchte Pokémon hier nicht sehen, können Sie alle Pokémon sehen, indem Sie die Option auf der Einstellungsseite aktivieren. Und bitte melden Sie alle fehlenden Begegnungen als Fehler, um anderen Nuzlockern zu helfen. ",
   "status": "Status",
@@ -52,5 +61,6 @@
   "template_hint": "Beachten Sie, dass dadurch nur die möglichen Begegnungen und Level-Cap-Nummern kopiert werden, nicht jedoch die gym-Informationen",
   "tracker": "Tracker",
   "types": "Typen",
+  "username": "Benutzername",
   "Weak against": "Schwach gegenüber"
 }
