--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -23,7 +23,11 @@
   "Has no effect on": "Has no effect on",
   "Immune to": "Immune to",
   "increased_stat": "Increased stat",
+  "last_updated": "Last updated:",
+  "logging_out": "Logging out",
   "login_error": "Unable to login",
+  "login_with_email": "Login with an email. You can upload your nuzlocke data to access it from a different device.",
+  "logout": "Logout",
   "logout_error": "Unable to logout",
   "name": "Name",
   "nature": "Nature",
@@ -37,11 +41,16 @@
   "report": "Report",
   "Resists": "Resists",
   "save": "Save",
+  "save_nuzlocke_data": "Save Nuzlocke Data and Username",
+  "save_nuzlocke_remotely": "The following option will save your Nuzlocke Data remotely (This does not happen automatically):",
+  "saving": "Saving",
   "search": "Search",
   "search_help": "Search by Pokémon, location, or status",
   "see_more": "See more",
   "select": "Select",
   "select_move": "Select a move...",
+  "send_magic_link": "Send magic link",
+  "sending_magic_link": "Sending magic link",
   "share_success": "Sharing now available",
   "show_all_tooltip": "If you don't happen to see the pokémon you're looking for here you can see all pokémon by enabling the option on the settings page. And please report any missing encounters as a bug to help out fellow nuzlockers.",
   "status": "Status",
@@ -53,5 +62,6 @@
   "template_hint": "Note this will only copy over the possible encounters and level cap numbers but not the gym information",
   "tracker": "Tracker",
   "types": "Types",
+  "username": "Username",
   "Weak against": "Weak against"
 }
