--- a/src/locale/es/common.json
+++ b/src/locale/es/common.json
@@ -22,7 +22,11 @@
   "Has no effect on": "No tiene ningún efecto sobre",
   "Immune to": "Immune a",
   "increased_stat": "Stat aumentada",
+  "last_updated": "Última actualización:",
+  "logging_out": "Cerrando sesión",
   "login_error": "No se puede iniciar sesión",
+  "login_with_email": "Inicia sesión con un correo electrónico. Puedes cargar tus datos nuzlocke para acceder a ellos desde un dispositivo diferente.",
+  "logout": "Cerrar sesión",
   "logout_error": "No se puede cerrar la sesión",
   "name": "Nombre",
   "nature": "Naturaleza",
@@ -36,11 +40,16 @@
   "report": "Reportar",
   "Resists": "Resiste",
   "save": "Guardar",
+  "save_nuzlocke_data": "Guardar datos y nombre de usuario de Nuzlocke",
+  "save_nuzlocke_remotely": "La siguiente opción guardará sus datos de Nuzlocke de forma remota (esto no sucede automáticamente):",
+  "saving": "Guardando",
   "search": "Buscar",
   "search_help": "Buscar por Pokémon, ubicación o estado",
   "see_more": "Ver más",
   "select": "Seleccione",
   "select_move": "Seleccione un move...",
+  "send_magic_link": "Enviar enlace mágico",
+  "sending_magic_link": "Enviando enlace mágico",
   "share_success": "Compartir ahora disponible",
   "show_all_tooltip": "Si no ves el pokémon que estás buscando aquí, puedes ver todos los pokémon habilitando la opción en la página de configuración. Y por favor reporta cualquier encuentro perdido como un error para ayudar a otros nuzlockers. ",
   "status": "Estado",
@@ -52,5 +61,6 @@
   "template_hint": "Ten en cuenta que esto solo copiará los posibles encuentros y los números de límite de nivel, pero no la información del gym",
   "tracker": "Tracker",
   "types": "Tipos",
+  "username": "Nombre de usuario",
   "Weak against": "Debil contra"
 }
