feat: added delete account feature, fixed encounters, style adjustments, removed old social and download links

--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -1,10 +1,12 @@
 {
+  "account_deletion": "Kontolöschung",
   "back": "Zurück",
   "calculator": "Taschenrechner",
   "cancel": "Abbrechen",
   "check_email": "Überprüfen Sie Ihre E-Mail auf den Login-Link",
   "choose_a_game": "Wähle ein Spiel",
   "community": "Gemeinschaft",
+  "confirm_delete": "Bestätigen",
   "copy": "Kopieren",
   "copied": "Kopiert",
   "currently_logged_in": "Sie sind derzeit angemeldet mit:",
@@ -12,9 +14,19 @@
   "data_error": "Profil kann nicht aktualisiert werden",
   "data_success": "Die Profildaten wurden erfolgreich gespeichert",
   "decreased_stat": "Verringerte statistik",
-  "description": "Beschreibung",
+  "delete": "Löschen",
   "delete_custom": "Dadurch wird das benutzerdefinierte Spiel gelöscht. Bist du sicher?",
+  "delete_data_error": "Das Konto kann nicht gelöscht werden. Bitte melden Sie einen Fehler.",
+  "delete_data_success": "Das Konto wurde erfolgreich gelöscht",
+  "delete_nuzlocke": "Mit der folgenden Option werden Ihre Nuzlocke-Daten und Ihr Nuzlocke-Konto dauerhaft vom Server gelöscht:",
+  "delete_steps_header": "Schritte zum Löschen des Kontos der Nuzlocke Tracker App",
+  "delete_steps_1": "Authentifizieren Sie sich per E-Mail, indem Sie auf die Schaltfläche in der oberen rechten Ecke klicken und den Anmeldelink erhalten",
+  "delete_steps_2": "Öffnen Sie nach der Authentifizierung die Kontoeinstellungen über die Schaltfläche in der oberen rechten Ecke",
+  "delete_steps_3": "Befolgen Sie die Schritte, wenn Sie auf Löschen klicken",
+  "delete_steps_warning": "Nach der Kontolöschung werden keine Daten gespeichert. Bitte beachten Sie, dass diese Aktion DAUERHAFT ist",
   "delete_success": "Spiel wurde erfolgreich gelöscht",
+  "delete_type_confirmation": "Bitte geben Sie Folgendes ein: {{text}} in die Eingabe und klicken Sie zur Bestätigung auf die Schaltfläche Löschen.",
+  "description": "Beschreibung",
   "dupe_description": "Ein Dupe ist ein bereits gefangenes Pokémon",
   "export": "Export",
   "generations": "Generationen",
