--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -1,10 +1,12 @@
 {
+  "account_deletion": "Account Deletion",
   "back": "Back",
   "calculator": "Calculator",
   "cancel": "Cancel",
   "check_email": "Check your email for the login link",
   "choose_a_game": "Choose a game",
   "community": "Community",
+  "confirm_delete": "Confirm",
   "copy": "Copy",
   "copied": "Copied",
   "currently_logged_in": "You are currently logged in with:",
@@ -12,9 +14,19 @@
   "data_error": "Unable to update the profile",
   "data_success": "Successfully saved the profile data",
   "decreased_stat": "Decreased stat",
-  "description": "Description",
+  "delete": "Delete",
   "delete_custom": "This will delete the custom game. Are you sure?",
+  "delete_data_error": "Unable to delete the account. Please report a bug.",
+  "delete_data_success": "Successfully deleted the account",
+  "delete_nuzlocke": "This following option will delete your Nuzlocke data and account from the server permanently:",
+  "delete_steps_header": "Steps for account deletion of the Nuzlocke Tracker App",
+  "delete_steps_1": "Authenticate by email by clicking on the button in the top right corner and obtaining the login link",
+  "delete_steps_2": "After authenticating, open account settings from the button in the top right corner",
+  "delete_steps_3": "Follow the steps when clicking Delete",
+  "delete_steps_warning": "No data will be retained after account deletion. Please note that this action is PERMANENT",
   "delete_success": "Successfully deleted game",
+  "delete_type_confirmation": "Please type: {{text}} in the input and click on the delete button to confirm",
+  "description": "Description",
   "dupe_description": "A dupe is a pokémon that has already been captured",
   "encounter_template": "Encounter Template",
   "export": "Export",
