--- a/src/locale/es/common.json
+++ b/src/locale/es/common.json
@@ -1,10 +1,12 @@
 {
+  "account_deletion": "Eliminación de cuenta",
   "back": "Atrás",
   "calculator": "Calculadora",
   "cancel": "Cancelar",
   "check_email": "Revise su correo electrónico para el enlace de inicio de sesión",
   "choose_a_game": "Elige un juego",
   "community": "Comunidad",
+  "confirm_delete": "Confirmar",
   "copy": "Copiar",
   "copied": "Copiado",
   "currently_logged_in": "Actualmente estás conectado con:",
@@ -12,9 +14,19 @@
   "data_error": "No se puede actualizar el perfil",
   "data_success": "Se guardó con éxito los datos del perfil",
   "decreased_stat": "Stat disminuida",
-  "description": "Descripción",
+  "delete": "Eliminar",
   "delete_custom": "Esto eliminará el juego personalizado. ¿Estás seguro?",
+  "delete_data_error": "No se puede eliminar la cuenta. Por favor, reportar un bug.",
+  "delete_data_success": "La cuenta se eliminó exitosamente",
+  "delete_nuzlocke": "La siguiente opción eliminará tus datos y tu cuenta de Nuzlocke del servidor de forma permanente:",
+  "delete_steps_header": "Pasos para eliminar la cuenta de la aplicación Nuzlocke Tracker",
+  "delete_steps_1": "Autentícate por correo electrónico haciendo clic en el botón en la esquina superior derecha y obteniendo el enlace de inicio de sesión",
+  "delete_steps_2": "Después de autenticarse, abra la configuración de la cuenta desde el botón en la esquina superior derecha",
+  "delete_steps_3": "Sigue los pasos al hacer clic en Eliminar",
+  "delete_steps_warning": "No se conservarán datos después de la eliminación de la cuenta. Tenga en cuenta que esta acción es PERMANENTE",
   "delete_success": "El juego se eliminó correctamente",
+  "delete_type_confirmation": "Escriba: {{text}} en la caja de texto y haga clic en el botón eliminar para confirmar",
+  "description": "Descripción",
   "dupe_description": "Un dupe es un pokémon que ya ha sido capturado",
   "export": "Exportar",
   "generations": "Generaciones",
